# meta

./: CMakeLists.txt  iterator_experiments.cpp  verification.cpp
meta/: algorithm.hpp  common.hpp  enumerator.hpp  iterator.hpp  predicates.hpp  range.hpp  tlist.hpp  tree.hpp  util.hpp  vlist.hpp
meta/detail/: list_verification.hpp  tree_verification.hpp
